domain/src/main/java/com/example/domain/task/error/GetFavouritePlacesError.kt
package com.example.domain.task.error

data class GetFavouritePlacesError(val throwable: Throwable)